Delete unused assets and update file paths

--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "front": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "back": "nodemon server/api.cjs",
+    "dev": "concurrently \"npm run front\" \"npm run back\""
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "concurrently": "^8.2.2",
+    "express": "^4.18.2",
     "framer-motion": "^10.16.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -25,6 +29,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "nodemon": "^3.0.2",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "vite": "^5.0.0"
