--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
     "concurrently": "^8.2.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "framer-motion": "^10.16.5",
+    "mongodb": "^6.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1"
