--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
     "concurrently": "^8.2.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "framer-motion": "^10.16.5",
@@ -21,7 +22,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
-    "sha256": "^0.2.0"
+    "sha256": "^0.2.0",
+    "universal-cookie": "^7.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
