Add uuid package dependency

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
     "sha256": "^0.2.0",
-    "universal-cookie": "^7.0.1"
+    "universal-cookie": "^7.0.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
